# manitest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  base.py  data.py  eval.py  main.py  metrics.py  pyproject.toml  requirements.txt  task_template.py  utils.py
prompts/: mednli.yaml  medparasimp.yaml  scitail.yaml
src/manitest/: __init__.py  base.py  eval.py  main.py  metrics.py  task_template.py  utils.py
src/manitest/bigbio_datasets/bioasq_task_b/:  .gitattributes  LICENSE  README.md  bioasq_task_b.py
src/manitest/bigbio_datasets/bionlp2023_st_1a/: LICENSE  README.md  bionlp2023_st_1a.py
src/manitest/bigbio_datasets/clinical_qa/: clinical_qa.py
src/manitest/bigbio_datasets/live_qa/: live_qa.py
src/manitest/bigbio_datasets/med_qa/: med_qa.py
src/manitest/bigbio_datasets/medicationqa/: medicationqa.py
src/manitest/bigbio_datasets/mediqa_nli/: mediqa_nli.py
src/manitest/bigbio_datasets/mediqa_rqe/: bigbiohub.py  mediqa_rqe.py
src/manitest/bigbio_datasets/medmcqa/: LICENSE  README.md  bigbiohub.py  medmcqa.py
src/manitest/bigbio_datasets/mednli/: README.md  mednli.py
src/manitest/bigbio_datasets/medparasimp/: README.md  medparasimp.py
src/manitest/old_tasks/: mednli.py
src/manitest/tasks/: bioasq_task_b_few_shot.py  mednli_few_shot.py  medparasimp_few_shot.py  medqa_few_shot.py  pubmedqa_few_shot.py  scitail.py
tests/: test.yaml  test_base.py  test_yaml.py
tests/mednli/: mednli.py  mednli_fewshot.py
tests/medparasimp/: config.yaml
tests/scitail/: scitail.py
tests/truthfulqa/: truthfulqa.py
(+12 files in other folders)
